--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>GetCoined | ROI Calculator</title>
 	<link rel="icon" href="media/icofile.ico" type="image/x-icon"/>
 	<link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
+	<script src="investcalc.js"></script>
 </head>
 <body>
 <div id="global_page">
@@ -32,15 +33,15 @@
 	</p>
 	</div> <!--instructions_container-->
 	<div id="form_container">
-	<form action="#" method="post">
+	<form onsubmit="return false">
 		<div id="date_form">
 		<label for="date">Date invested in Bitcoin</label>
-		<input type="date" value="2020-04-01">
+		<input id="date_field" name="date" type="date" value="2020-04-01">
 		</div> <!--date_form-->
 		<div id="invest_form">
 		<label for="investment">Amount of investestment</label>
-		<span id="currencyinput">$ <input type="text" name="investment"></span>
-		<input type="submit" value="Submit">
+		<span id="currencyinput">$ <input id="invest_field" type="number" name="investment"></span>
+		<input type="submit" value="Submit" onclick="calcROI();">
 		</div> <!--invest_form-->
 	</form>
 	</div> <!--form_container-->
